added the game routes
